--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -66,3 +66,11 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+.button.logout {
+    background-color: #2196F3;
+}
+
+.button.logout:hover {
+    background-color: #1976D2;
+}
