--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -1,5 +1,4 @@
-/* Reset some default styles */
-body, h1, h2, h3, p, ul, li {
+h1, h2, h3, p, ul, li {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
@@ -9,21 +8,27 @@ body, h1, h2, h3, p, ul, li {
 body {
     background-color: #f2f2f2;
     color: #333;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #display {
+    border-radius: 20px;
+    margin-top: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    min-height: 80vh;
 }
 
 #header {
     background-color: #007bff;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
     position: relative;
+    border-radius: 30px;
 }
 
 form {
