--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -48,6 +48,7 @@ body {
 
 /* Style the profile details */
 .profile-details ul {
+    text-align: left;
     list-style: none;
     margin: 20px 0;
 }
@@ -67,7 +68,6 @@ body {
     margin-left: 5px;
 }
 
-/* Style anchor links and buttons */
 a {
     /* Remove the default underline and border */
     text-decoration: none;
