--- a/public/stylesheets/reg-update.css
+++ b/public/stylesheets/reg-update.css
@@ -1,137 +1,177 @@
-/* Reset some default styles */
-body, h1, h2, h3, p, button, input, select, label {
+* {
     margin: 0;
     padding: 0;
-    border: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif; /* Set the font family for all elements */
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
-    background-color: #f5f5f5;
-}
-
-.container {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #f7f7f7;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    padding: 20px;
-    box-sizing: border-box;
 }
 
-#register {
-    width: 100%;
-    max-width: 500px;
+.container {
+    width: 70%;
     padding: 20px;
+}
+
+.register-box {
     background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 40px;
+    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
+}
+
+.form-header {
+    font-weight: 600;
+    font-size: 28px;
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .form-row {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
-.form-column {
-    flex-basis: calc(50% - 10px);
+.form-group {
+    flex: 0 0 calc(50% - 10px);
 }
 
-#regform label {
-    font-weight: bold;
-    font-size: 14px;
-    margin-bottom: 5px;
+label {
+    font-weight: 600;
+    margin-bottom: 8px;
+    color: #333;
     display: block;
 }
 
-#regform input[type="text"],
-#regform input[type="password"],
-#regform input[type="number"],
-#regform input[type="email"],
-#regform select,
-#regform input[type="checkbox"],
-#regform input[type="file"] {
+.form-input,
+.file-input {
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 14px;
-    display: block;
-    margin-bottom: 10px;
+    border-radius: 6px;
+    font-size: 16px;
+    transition: border-color 0.3s;
 }
 
-#regform select {
-    width: 100%;
-    height: 40px;
-    appearance: none;
-    background: url('../images/down-arrow-svgrepo-com.svg') no-repeat right center;
-    background-position-x: 95%;
-    background-size: 20px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 14px;
-    padding: 10px;
-    margin-bottom: 10px;
-    transition: border-color 0.3s, box-shadow 0.3s;
+.form-input:focus,
+.file-input:focus {
+    outline: none;
+    border-color: #007bff;
 }
 
-#regform select:focus {
-    border-color: #5a8aef;
-    box-shadow: 0 0 4px rgba(90, 138, 239, 0.5);
-}
-
-#regform .upload-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
-#regform .upload-btn {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    border-radius: 3px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: background-color 0.3s;
-}
-
-#regform .upload-btn:hover {
-    background-color: #555;
-}
-
-#regform .signin {
-    background-color: #333;
+.file-input-label {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #007bff;
     color: #fff;
     border: none;
-    padding: 10px;
-    border-radius: 3px;
+    border-radius: 6px;
+    font-size: 14px;
     cursor: pointer;
-    width: 100%;
-    font-size: 16px;
     transition: background-color 0.3s;
+    position: relative;
+    overflow: hidden;
 }
 
-#regform .signin:hover {
-    background-color: #555;
+.upload-icon {
+    display: inline-block;
+    margin-right: 6px;
+    position: relative;
+    top: 2px;
 }
 
-.form-column label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
+.file-input {
+    display: none;
 }
 
 .radio-options {
-    display: inline-block;
-    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
 }
 
-.radio-option input[type="radio"] {
-    vertical-align: middle;
+.radio-option {
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.radio-option input {
     margin-right: 5px;
+}
+
+/* Style for select elements */
+.form-select {
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+    appearance: none;
+    background-color: #fff;
+    background-image: url('/images/dropdown.png');
+    background-repeat: no-repeat;
+    background-position: right 10px center; /* Adjust the horizontal position */
+    background-size: 20px auto; /* Adjust the size of the arrow */
+    padding: 12px 40px 12px 12px;
+}
+
+.signin-button {
+    display: inline-block;
+    padding: 12px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 100%;
+    text-align: center;
+}
+
+.signin-button:hover {
+    background-color: #0056b3;
+}
+
+.error-message {
+    color: #ff0000;
+    margin-top: 10px;
+}
+
+.button-container {
+    max-width: 30%;
+    text-align: center;
+    margin: 20px auto;
+}
+
+
+input[type="number"] {
+    appearance: none; /* Remove default appearance */
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+    padding: 12px;
+    width: 100%;
+    transition: border-color 0.3s;
+}
+
+input[type="number"]:focus {
+    outline: none;
+    border-color: #007bff;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    appearance: none;
+    margin: 0;
 }
