--- a/views/update.pug
+++ b/views/update.pug
@@ -1,54 +1,56 @@
 doctype html
-html
+html(lang="en")
     head
-        title Update
-        link(rel="stylesheet", href="/stylesheets/reg-update.css")
+        meta(charset="UTF-8")
+        title Register
+        link(href="/stylesheets/reg-update.css", rel="stylesheet", type="text/css")
         link(rel="preconnect", href="https://fonts.googleapis.com")
         link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@600&display=swap", rel="stylesheet")
     body
         .container
-            #register
-                form#regform(method="post", action="/update")
+            .register-box
+                h1.form-header Update Detail
+                form#regform(action="/update", method="post", autocomplete="off")
                     .form-row
-                        h1(style="text-align: left; margin-bottom: 10px;") Profile
+                        .form-group
+                            label(for="Id") Employee Id
+                            input.form-input(name="employeeId", type="text",value=employeeId,readonly="true")
                     .form-row
-                        .form-column
-                            label(for="eid") Employee ID:
-                            input(name="employeeId", type="text", readonly="true", value=employeeId)
-                        .form-column
-                            label(for="usrname") Name:
-                            input(name="employeeName", type="text", value=employeeName)
+                        .form-group
+                            label(for="employeeName") Name
+                            input.form-input(name="employeeName", type="text",value=employeeName)
+                        .form-group
+                            label(for="email") Email
+                            input.form-input(name="email", type="text",value=email)
                     .form-row
-                        .form-column
-                            label(for="mobile") Mobile:
-                            input(name="mobileNumber", type="text", value=mobileNumber)
-                        .form-column
-                            label(for="age") Age:
-                            input(name="age", type="number", value=age)
+                        .form-group
+                            label(for="mobileNumber") Mobile
+                            input.form-input(name="mobileNumber", type="number",value=mobileNumber)
+                        .form-group
+                            label(for="age") Age
+                            input.form-input(name="age", type="number",value=age)
                     .form-row
-                        .form-column
-                            label(for="gender") Gender:
-                            select(name="gender")
-                                option(value="Male", selected=gender === "Male") Male
-                                option(value="Female", selected=gender === "Female") Female
-                        .form-column
-                            label(for="email") Email:
-                            input(name="email", type="email", value=email)
+                        .form-group
+                            label(for="gender") Gender
+                            select.form-select(name="gender")
+                                option(value="Male",selected=gender === "Male") Male
+                                option(value="Female",selected=gender === "Female") Female
+                        .form-group
+                            label(for="designation") Designation
+                            input.form-input(name="designation", type="text",value=designation)
                     .form-row
-                        .form-column
-                            label(for="designation") Designation:
-                            input(name="designation", type="text", value=designation)
-                        .form-column
-                            label(for="maritalStatus") Marital Status:
-                            select(name="maritalStatus")
-                                option(value="Single", selected=maritalStatus === "Single") Single
-                                option(value="Married", selected=maritalStatus === "Married") Married
-                    .form-row
-                        .form-column
-                            label(for="branch") Branch:
-                            select(name="branch")
-                                option(value="Mylapore", selected=branch === "Mylapore") Mylapore
-                                option(value="T Nagar", selected=branch === "T Nagar") T Nagar
-                                option(value="Alwarpet", selected=branch === "Alwarpet") Alwarpet
-                    input.update(type="submit", class="signin", value="Update")
+                        .form-group
+                            label(for="maritalStatus") Marital Status
+                            select.form-select(name="maritalStatus")
+                                option(value="Single") Single
+                                option(value="Married") Married
+                        .form-group
+                            label(for="branch") Branch
+                            select.form-select(name="branch")
+                                option(value="Mylapore",selected=branch === "Mylapore") Mylapore
+                                option(value="T Nagar",selected=branch === "T Nagar") T Nagar
+                                option(value="Alwarpet",selected=branch === "Alwarpet") Alwarpet
+                    .button-container
+                        input.signin-button(type="submit", value="Submit")
+                    p.error-message #{message}
