--- a/views/admin.pug
+++ b/views/admin.pug
@@ -18,6 +18,7 @@ html(lang="en")
                         label(for="branch")
                             i.fas.fa-map-marker-alt
                         select#branch(name="branch")
+                            option(value="") Select
                             option(value="All") All
                             option(value="Mylapore") Mylapore
                             option(value="T Nagar") T Nagar
